fix z-index awkward scrolling bug on android

--- a/sass/components/_progress-step.scss
+++ b/sass/components/_progress-step.scss
@@ -39,7 +39,6 @@
       border: 2px solid transparent;
       border-radius: 50%;
       background-color: #d5d5d5;
-      z-index: 10;
     }
 
     &.doing .node {
